# nexosim-py

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml
docs/: index.md  requirements.txt  user_guide.md
docs/reference/: mod_types.md
src/: serialization_test.py
src/nexosim/: __init__.py  _simulation.py  exceptions.py  time.py  types.py
src/nexosim/_proto/: simulation.proto  simulation_pb2.py  simulation_pb2.pyi  simulation_pb2_grpc.py  simulation_pb2_grpc.pyi
src/nexosim/aio/: __init__.py  _simulation.py
tests/: conftest.py  test_async.py  test_me1.py  test_me2.py  test_simulation.py  test_time.py  test_types.py
tests/bench/: Cargo.toml
tests/bench/src/: bench_2.rs  coffee.rs  complex_types.rs  lib.rs  main.rs  sims.rs
