[project]
name = "nexosim"
version = "0.0.1"
authors = [{ name = "Serge Barral", email = "serge.barral@asynchronics.com" }]
description = "A gRPC client for the NeXosim simulator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["attrs>=23.1.0", "cattrs>=24.1.0", "cbor2>=5.4.6", "grpcio>=1.0.0", "protobuf>=5.29.2", "typing-extensions>=4.12.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexosim"]

[tool.pyright]
include = ["src"]
ignore = ["src/nexosim/_proto"]
enableExperimentalFeatures = true

[tool.ruff]
src = ["src", "tests"]
extend-exclude = ["src/nexosim/_proto"]
pydocstyle.convention = "google"
