[project]
name = "nexosim-py"
version = "0.1.0"
maintainers = [{ name = "Stanisław Massalski", email = "stanislaw.massalski@asynchronics.com" }]
description = "A gRPC client for the NeXosim simulator"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = ["attrs>=23.1.0", "cattrs>=24.1.0", "cbor2>=5.4.6", "grpcio>=1.0.0", "protobuf>=5.29.2, <6", "typing-extensions>=4.12.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "tests/bench/targets/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nexosim"]

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs>=1.6.0",
  "mkdocstrings>=0.25.1",
  "mkdocstrings-python>=1.10.5",
  "mkdocs-material>=9.5.27",
  "mkdocs-include-markdown-plugin>=6.2.0",
]

[tool.hatch.envs.tests]
dependencies = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.25.3",
]

[tool.hatch.envs.make]
dependencies = [
  "grpcio-tools>=1.70.0"
]

[tool.pyright]
include = ["src"]
ignore = ["src/nexosim/_proto"]
enableExperimentalFeatures = true

[tool.ruff]
src = ["src", "tests"]
extend-exclude = ["src/nexosim/_proto"]
pydocstyle.convention = "google"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests",
    "integration",
]
pythonpath = [
  "src"
]
asyncio_default_fixture_loop_scope = "function"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
