[project]
name = "nexosim"
version = "0.0.1"
authors = [{ name = "Serge Barral", email = "serge.barral@asynchronics.com" }]
description = "A gRPC client for the NeXosim simulator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["attrs>=23.1.0", "cattrs>=24.1.0", "cbor2>=5.4.6", "grpcio>=1.0.0", "protobuf>=5.29.2", "typing-extensions>=4.12.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexosim"]

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs>=1.6.0",
  "mkdocstrings>=0.25.1",
  "mkdocstrings-python>=1.10.5",
  "mkdocs-material>=9.5.27",
  "mkdocs-include-markdown-plugin>=6.2.0",
]

[tool.hatch.envs.test]
dependencies = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.25.3",
]
python-sources = ["external"]

[tool.hatch.envs.test.scripts]
run = "pytest -m \"not slow\""
run-all = "pytest"

[[tool.hatch.envs.test.matrix]]
python = ["3.11", "3.12", "3.13"]


[tool.hatch.envs.typecheck]
dependencies = [
  "pyright>=1.1.397"
]

[tool.hatch.envs.typecheck.scripts]
run = "pyright"

[tool.pyright]
include = ["src"]
ignore = ["src/nexosim/_proto"]
enableExperimentalFeatures = true

[tool.ruff]
src = ["src", "tests"]
extend-exclude = ["src/nexosim/_proto"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = [
  "B009",
  "B010",
  # line length lint is disabled because ruff format checks
  # line length while ignoring docstrings
  "E501",
]
pydocstyle.convention = "google"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests",
    "integration",
]
pythonpath = [
  "src"
]
asyncio_default_fixture_loop_scope = "function"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
